tests/error/remainderInteger-wrong-2nd-argument-string.uplc
(program 1.0.0[[(builtin remainderInteger)(con integer 10)](con string "Ola")])